started domain-invariant viscosity and diffusion classes and more work on doc

--- a/doc/dissertation/chapter2.tex
+++ b/doc/dissertation/chapter2.tex
@@ -33,7 +33,7 @@
   \subsubsection{Theta Schemes\label{sec:theta}}
     \input{content/discretization/theta}
 %===============================================================================
-\section{Low-Order Schemes}  
+\section{Low-Order Scheme for Scalar Conservation Laws}  
 %===============================================================================
 \subsection{Low-Order Viscosity\label{sec:low_order_viscosity}}
   \input{content/low_order/low_order_viscosity}
@@ -45,6 +45,13 @@
   \input{content/low_order/steadystate_DMP}
   \input{content/low_order/explicit_DMP}
   \input{content/low_order/theta_DMP}
+%===============================================================================
+\section{Low-Order Scheme for Conservation Law Systems}  
+%===============================================================================
+\subsection{Low-Order Viscosity\label{sec:low_order_viscosity_domain_invariant}}
+  \input{content/low_order/low_order_viscosity_domain_invariant}
+\subsection{The Low-Order System\label{sec:low_order_system_domain_invariant}}
+  \input{content/low_order/low_order_system_domain_invariant}
 %===============================================================================
 \section{High-Order Schemes}  
 %===============================================================================
