--- a/doc/dissertation/dissertation.tex
+++ b/doc/dissertation/dissertation.tex
@@ -20,6 +20,7 @@
 \usepackage{empheq} % for emphasizing certain equations
 \usepackage{booktabs}
 \usepackage{subcaption}
+\usepackage[mathscr]{euscript} % for \mathscr{} in math mode
 \usepackage[hidelinks]{hyperref}
 
 % input user-defined commands
