added fast estimate algorithm for max wave speed to doc

--- a/doc/dissertation/README
+++ b/doc/dissertation/README
@@ -34,4 +34,5 @@ TO DO:
   2. all equations are numbered
 * check that all equations are consistently punctuated (with comma or period
   at the end of each. For conditional expressions, make sure this is consistent
+* re-order symbols in nomenclature if their symbol has been changed
 
