--- a/doc/dissertation/content/newcommands.tex
+++ b/doc/dissertation/content/newcommands.tex
@@ -232,6 +232,7 @@
 
 % common fractions
 \newcommand{\half}{\frac{1}{2}}
+\newcommand{\fourth}{\frac{1}{4}}
 
 % derivatives
 \newcommand{\dd}[2]{\frac{d #1}{d #2}}               % ordinary derivative
@@ -285,3 +286,19 @@
 
 % references commands
 \newcommand{\refsec}[1]{, \S#1}
+
+% algorithm shortcuts
+\newcommand{\objective}{\phi}
+\newcommand{\hmin}{\height_{\text{min}}}
+\newcommand{\hmax}{\height_{\text{max}}}
+\newcommand{\hlow}{\check{\height}}
+\newcommand{\hhigh}{\hat{\height}}
+\newcommand{\hrarefaction}{\tilde{\height}_*}
+\newcommand{\tol}{\epsilon}
+\newcommand{\minwavespeed}{\wavespeed_{\text{min}}}
+\newcommand{\lowwavespeedone}{\check{\wavespeed}_1}
+\newcommand{\highwavespeedone}{\hat{\wavespeed}_1}
+\newcommand{\lowwavespeedtwo}{\check{\wavespeed}_2}
+\newcommand{\highwavespeedtwo}{\hat{\wavespeed}_2}
+\newcommand{\hinterplow}{\height_d}
+\newcommand{\hinterphigh}{\height_u}
