--- a/doc/dissertation/dissertation.tex
+++ b/doc/dissertation/dissertation.tex
@@ -20,6 +20,8 @@
 \usepackage{empheq} % for emphasizing certain equations
 \usepackage{booktabs}
 \usepackage{subcaption}
+\usepackage{algpseudocode}
+\usepackage{algorithm}
 \usepackage[mathscr]{euscript} % for \mathscr{} in math mode
 \usepackage[hidelinks]{hyperref}
 
